00_sample_applications/03_eks_cluster_terraform/05_AWS_LoadBalancer/examples/03/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: aws_lbc_2
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: myapp
